Error en Validacion JS

--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -7,7 +7,7 @@
 
     <main>
         <h2 class="title">Agregue un nuevo producto</h2>
-        <form action="/products/create" id="formProducts" method="POST" enctype="multipart/form-data" class="form">
+        <form action="/products" id="formProducts" method="POST" enctype="multipart/form-data" class="form">
             <div class="control-formulario1">
                 <label for="name">Nombre del producto:</label>
                 <input type="text" name="name" id="name" placeholder="Nombre del producto" class="control1" />
