Comenzamos las validaciones del back para la creacion de productos

--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -10,7 +10,7 @@
         </div>
         <section class="elementos-carrito">
             <% if(products.length==0){ %>
-            <h2 class="margin-search">No encotramos resultados para tu busqueda <i class="fas fa-search"></i></h2>
+            <h2 class="margin-search">No encontramos resultados para tu busqueda <i class="fas fa-search"></i></h2>
             <br>
             <% }else { %>
             <% for( producto of products ) { %>
