--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -10,26 +10,47 @@
         <form action="/products" id="formProducts" method="POST" enctype="multipart/form-data" class="form">
             <div class="control-formulario1">
                 <label for="name">Nombre del producto:</label>
-                <input type="text" name="name" id="name" placeholder="Nombre del producto" class="control1" />
+                <input type="text" name="name" id="name" placeholder="Nombre del producto" class="control1"
+                    <%= locals.errors && errors.name ? "is-invalid":null  %>
+                    value=<%= locals.old && old.name ? old.name:null %>>
+
+                <% if (locals.errors && errors.name) { %>
+                <p class="alert"><%=errors.name.msg%></p>
+
+                <% } %>
             </div>
 
             <div class="control-formulario1">
                 <label for="description">Detalle del producto:</label>
                 <input type="textarea" name="description" id="description" placeholder="Detalle del producto"
-                    class="control1" />
+                    class="control1" <%= locals.errors && errors.description? "is-invalid":null  %>
+                    value=<%= locals.old && old.description? old.description:null  %>>
+
+                <% if (locals.errors && errors.description) { %>
+                <p class="alert"><%=errors.description.msg%></p>
+
+                <% } %>
             </div>
 
             <div class="control-formulario1">
                 <label for="image">Imagen del producto:</label>
-                <input type="file" name="image" id="image"/>
+                <input type="file" name="image" id="image" />
+
+                <% if (locals.errors && errors.image) { %>
+                <p class="alert"><%=errors.image.msg%></p>
+                <% } %>
             </div>
 
             <div>
                 <label for="genre" class="negrita">Genero</label>
                 <br>
                 <% genres.forEach(genre => { %>
-                <input type="radio" name="genre" id="genre" value="<%= genre.id %>"><%= genre.name %>
+                <input type="radio" name="genre" id="genre" value="<%= genre.id %>"
+                    <%= locals.old && old.genre== genre.id  ? "checked":null  %>><%= genre.name %>
                 <% }) %>
+                <% if (locals.errors && errors.genre) { %>
+                <p class="alert"><%=errors.genre.msg%></p>
+                <% } %>
             </div>
 
             <div class="control-formulario1">
@@ -38,6 +59,9 @@
                     <% brands.forEach(brand => { %>
                     <option value="<%= brand.id %>"><%= brand.name %> </option>
                     <% }) %>
+                    <% if (locals.errors && errors.brand) { %>
+                    <p class="alert"><%=errors.brand.msg%></p>
+                    <% } %>
                 </select>
             </div>
 
@@ -54,6 +78,7 @@
                 <input type="checkbox" name="size" id="size" value="44" />44
                 <input type="checkbox" name="size" id="size" value="45" />45
                 <input type="checkbox" name="size" id="size" value="46" />46
+
             </div>
 
             <div class="control-formulario1">
@@ -76,18 +101,32 @@
 
             <div class="control-formulario1">
                 <label for="price">Precio:</label>
-                <input type="number" name="price" id="price" placeholder="9999" class="control1" />
+                <input type="number" name="price" id="price" placeholder="9999" class="control1"
+                    <%= locals.errors && errors.price? "is-invalid":null  %>
+                    value=<%= locals.old && old.price? old.price:null  %>>
+
+                <% if (locals.errors && errors.price) { %>
+                <p class="alert"><%=errors.price.msg%></p>
+
+                <% } %>
             </div>
 
             <div class="control-formulario1">
                 <label for="discount">Descuento:</label>
-                <input type="number" name="discount" id="discount" placeholder="15" class="control1" />
+                <input type="number" name="discount" id="discount" placeholder="15" class="control1"
+                    <%= locals.errors && errors.discount? "is-invalid":null  %>
+                    value=<%= locals.old && old.discount? old.discount:null  %> />
+
+                <% if (locals.errors && errors.discount) { %>
+                <p class="alert"><%=errors.discount.msg%></p>
+
+                <% } %>
             </div>
 
             <br />
 
             <div class="register-buttons">
-                <button type="submit" value="Confirmar"  id='submitButton' class="confirm-button">Confirmar</button>
+                <button type="submit" value="Confirmar" id='submitButton' class="confirm-button">Confirmar</button>
                 <button type="reset" value="Borrar" class="delete-button">Borrar</button>
             </div>
             <br />
@@ -95,7 +134,7 @@
     </main>
 
     <%- include("../partials/footer")%>
-    <script src="./js/validationsProducts.js"></script>
+    <script src="/js/validationsProducts.js"></script>
 </body>
 
 </html>
