--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -59,15 +59,37 @@
                     <% brands.forEach(brand => { %>
                     <option value="<%= brand.id %>"><%= brand.name %> </option>
                     <% }) %>
-                    <% if (locals.errors && errors.brand) { %>
-                    <p class="alert"><%=errors.brand.msg%></p>
-                    <% } %>
                 </select>
+                <% if (locals.errors && errors.brand) { %>
+                <p class="alert"><%=errors.brand.msg%></p>
+                <% } %>
             </div>
 
             <div>
                 <label for="size" class="negrita">Talles:</label>
                 <br>
+                <% if (locals.old && old.size) { %>
+                <input type="checkbox" name="size" id="size" value="37"
+                    <%= locals.old && old.size.includes("37")  ? "checked":null %> />37
+                <input type="checkbox" name="size" id="size" value="38"
+                    <%= locals.old && old.size.includes("38")  ? "checked":null %> />38
+                <input type="checkbox" name="size" id="size" value="39"
+                    <%= locals.old && old.size.includes("39")  ? "checked":null %> />39
+                <input type="checkbox" name="size" id="size" value="40"
+                    <%= locals.old && old.size.includes("40")  ? "checked":null %> />40
+                <input type="checkbox" name="size" id="size" value="41"
+                    <%= locals.old && old.size.includes("41")  ? "checked":null %> />41
+                <input type="checkbox" name="size" id="size" value="42"
+                    <%= locals.old && old.size.includes("42")  ? "checked":null %> />42
+                <input type="checkbox" name="size" id="size" value="43"
+                    <%= locals.old && old.size.includes("43")  ? "checked":null %> />43
+                <input type="checkbox" name="size" id="size" value="44"
+                    <%= locals.old && old.size.includes("44") ? "checked":null %> />44
+                <input type="checkbox" name="size" id="size" value="45"
+                    <%= locals.old && old.size.includes("45") ? "checked":null %> />45
+                <input type="checkbox" name="size" id="size" value="46"
+                    <%= locals.old && old.size.includes("46")  ? "checked":null %> />46
+                <% }else{  %>
                 <input type="checkbox" name="size" id="size" value="37" />37
                 <input type="checkbox" name="size" id="size" value="38" />38
                 <input type="checkbox" name="size" id="size" value="39" />39
@@ -78,7 +100,10 @@
                 <input type="checkbox" name="size" id="size" value="44" />44
                 <input type="checkbox" name="size" id="size" value="45" />45
                 <input type="checkbox" name="size" id="size" value="46" />46
-
+                <% if (locals.errors && errors.size) { %>
+                <p class="alert"><%=errors.size.msg%></p>
+                <% } %>
+                <%  } %>
             </div>
 
             <div class="control-formulario1">
@@ -88,6 +113,9 @@
                     <option value="<%= color.id %>"><%= color.name %> </option>
                     <% }) %>
                 </select>
+                <% if (locals.errors && errors.colors) { %>
+                <p class="alert"><%=errors.colors.msg%></p>
+                <% } %>
             </div>
 
             <div class="control-formulario1">
@@ -97,6 +125,9 @@
                     <option value="<%= category.id %>"><%= category.name %> </option>
                     <% }) %>
                 </select>
+                <% if (locals.errors && errors.category) { %>
+                <p class="alert"><%=errors.category.msg%></p>
+                <% } %>
             </div>
 
             <div class="control-formulario1">
