--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -22,7 +22,7 @@
 
             <div class="control-formulario1">
                 <label for="description">Detalle del producto:</label>
-                <input type="textarea" name="description" id="description" placeholder="Detalle del producto"
+                <input type="text" name="description" id="description" placeholder="Detalle del producto"
                     class="control1" <%= locals.errors && errors.description? "is-invalid":null  %>
                     value=<%= locals.old && old.description? old.description:null  %>>
 
@@ -57,7 +57,9 @@
                 <label for="brand">Marca</label>
                 <select name="brand" id="brand">
                     <% brands.forEach(brand => { %>
-                    <option value="<%= brand.id %>"><%= brand.name %> </option>
+                    <option value="<%= brand.id %>"
+                        <%= locals.old && old.brand== brand.id  ? "selected":null  %>>
+                        <%= brand.name %> </option>
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.brand) { %>
@@ -110,7 +112,8 @@
                 <label for="colors" class="form-label">Color del producto:</label>
                 <select name="colors" id="colors" class="form-input">
                     <% colors.forEach(color => { %>
-                    <option value="<%= color.id %>"><%= color.name %> </option>
+                    <option value="<%= color.id %>"
+                        <%= locals.old && old.colors== color.id  ? "selected":null  %>><%= color.name %> </option>
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.colors) { %>
@@ -122,7 +125,9 @@
                 <label for="category" class="form-label">Categoría:</label>
                 <select name="category" id="category" class="form-input">
                     <% categories.forEach(category => { %>
-                    <option value="<%= category.id %>"><%= category.name %> </option>
+                    <option value="<%= category.id %>"
+                        <%= locals.old && old.category== category.id  ? "selected":null  %>
+                        ><%= category.name %> </option>
                     <% }) %>
                 </select>
                 <% if (locals.errors && errors.category) { %>
