--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -87,12 +87,12 @@
             </div>
             <div class="images padding">
                 <i class="fas fa-chevron-left previous icons-marca"></i>
-                <img src="images/marca-nike.png" alt="Nike" class="marca_img">
-                <img src="images/marca-adidas.png" alt="Adidas" class="marca_img">
-                <img src="images/marca-puma.png" alt="Puma" class="marca_img">
-                <img src="images/marca-converse.png" alt="Converse" class="marca_img none1">
-                <img src="images/marca-vans.png" alt="Vans" class="marca_img none2">
-                <img src="images/marca-newbalance.png" alt="Newbalance" class="marca_img none2">
+                <a href="/search?search=NIKE" class="marca_img"><img src="images/marca-nike.png" alt="Nike" class="marca_int"></a>
+                <a href="/search?search=ADIDAS" class="marca_img"><img src="images/marca-adidas.png" alt="Adidas" class="marca_int"></a>
+                <a href="/search?search=PUMA" class="marca_img"><img src="images/marca-puma.png" alt="Puma" class="marca_int"></a>
+                <a href="/search?search=CONVERSE" class="marca_img"><img src="images/marca-converse.png" alt="Converse" class="marca_int none1"></a>
+                <a href="/search?search=VANS" class="marca_img"><img src="images/marca-vans.png" alt="Vans" class="marca_int none2"></a>
+                <a href="/search?search=NEW BALANCE" class="marca_img"><img src="images/marca-newbalance.png" alt="Newbalance" class="marca_int none2"></a>
                 <i class="fas fa-chevron-right next icons-marca"></i>
             </div>
 
