--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -700,11 +700,11 @@ margin-top: 10%;
 .tallesdisponibles{
     margin: 5px;
 }
-.boton-talle{
+/* .boton-talle{
     border-radius: 30px;
     padding: 5px;
     background-color: #ffffff;
-}
+} */
 .cantidad1{
     display: flex;
     justify-content: center;
@@ -810,6 +810,27 @@ ol.nav-site{
 .margin-search{
     font-size: 20px;
 }
+
+input[type=radio] {
+    display:none; 
+    margin:10px;
+}
+input[type=radio] + label {
+    display:inline-block;
+    margin:-2px;
+    padding: 4px 12px;
+    background-color: #e7e7e7;
+    border-color: #ddd;
+    border: 1px solid grey;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+input[type=radio]:checked + label { 
+    background-image: none;
+    background-color:#d0d0d0;
+}
+  
 
 /*MAIN NEW PRODUCT*/
 
