--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -14,6 +14,9 @@
                     <label for="user" class="obligatorio">* Email</label>
                     <input type="text" name="email" id="user" placeholder="Email..." class="control-login"
                         value=<%= locals.old && old.email? old.email:null  %>>
+                    <div>
+                        <small class="alert erName"></small>
+                    </div>
                     <% if (locals.errors && errors.email) { %>
                     <p class="alert"><%=errors.email.msg%></p>
 
@@ -23,7 +26,11 @@
                     <label for="password" class="obligatorio">* Contraseña</label>
                     <input type="password" name="password" id="password" placeholder="Contraseña..."
                         class="control-login" />
+                    <div>
+                        <small class="alert erName"></small>
+                    </div>
                 </div>
+                <ul class="errores"></ul>
                 <div class="register-formulario center">
                     <label for="record"></label>
                     <input type="checkbox" name="record" id="record" /> Recuérdame
@@ -58,6 +65,7 @@
     </main>
 
     <%- include("../partials/footer")%>
+    <script src="/js/validationsLogin.js"></script>
 </body>
 
 </html>
