--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -110,6 +110,7 @@
     </main>
 
     <%- include("../partials/footer")%>
+    <script src="/js/validationsProducts.js"></script>
 </body>
 
 </html>
