--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -101,6 +101,7 @@
                 <input type="checkbox" name="size" id="size" value="46"
                     <%= locals.old && old.size.includes("46")  ? "checked":null %> />46
                 <% }else{  %>
+                <input type="checkbox" name="size" id="size" value="0" class="none" />
                 <input type="checkbox" name="size" id="size" value="37" />37
                 <input type="checkbox" name="size" id="size" value="38" />38
                 <input type="checkbox" name="size" id="size" value="39" />39
@@ -152,7 +153,7 @@
 
             <div class="control-formulario1">
                 <label for="price">Precio:</label>
-                <input type="number" name="price" id="price" placeholder="9999" class="control1" />
+
             
                 <input type="number" name="price" id="price" placeholder="9999" class="control1
                     <%= locals.errors && errors.price? "is-invalid":null  %>"
