--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -19,7 +19,7 @@
                 <p class="alert"><%=errors.name.msg%></p>
 
                 <% } %>
-                <div id="nameError"></div>
+                <div id="nameError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -32,7 +32,7 @@
                 <p class="alert"><%=errors.description.msg%></p>
 
                 <% } %>
-                <div id="descriptionError"></div>
+                <div id="descriptionError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -43,7 +43,7 @@
                 <% if (locals.errors && errors.image) { %>
                 <p class="alert"><%=errors.image.msg%></p>
                 <% } %>
-                <div id="imageError"></div>
+                <div id="imageError" class="alert"></div>
             </div>
 
             <div>
@@ -57,7 +57,7 @@
                 <% if (locals.errors && errors.genre) { %>
                 <p class="alert"><%=errors.genre.msg%></p>
                 <% } %>
-                <div id="genreError"></div>
+                <div id="genreError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -73,7 +73,7 @@
                 <% if (locals.errors && errors.brand) { %>
                 <p class="alert"><%=errors.brand.msg%></p>
                 <% } %>
-                <div id="brandError"></div>
+                <div id="brandError" class="alert"></div>
             </div>
 
             <div>
@@ -117,7 +117,7 @@
                 <p class="alert"><%=errors.size.msg%></p>
                 <% } %>
                 <%  } %>
-                <div id="sizeError"></div>
+                <div id="sizeError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -132,7 +132,7 @@
                 <% if (locals.errors && errors.colors) { %>
                 <p class="alert"><%=errors.colors.msg%></p>
                 <% } %>
-                <div id="colorsError"></div>
+                <div id="colorsError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -148,7 +148,7 @@
                 <% if (locals.errors && errors.category) { %>
                 <p class="alert"><%=errors.category.msg%></p>
                 <% } %>
-                <div id="categoryError"></div>
+                <div id="categoryError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -163,7 +163,7 @@
                 <p class="alert"><%=errors.price.msg%></p>
 
                 <% } %>
-                <div id="priceError"></div>
+                <div id="priceError" class="alert"></div>
             </div>
 
             <div class="control-formulario1">
@@ -177,7 +177,7 @@
                 <p class="alert"><%=errors.discount.msg%></p>
 
                 <% } %>
-                <div id="discountError"></div>
+                <div id="discountError" class="alert"></div>
             </div>
 
             <br />
