--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -89,13 +89,13 @@
         <a href="/products/<%= producto.id %>/edit"><button type="button" class="button-edit">EDITAR</button></a>
 
 
-        <form action="/products/<%=producto.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+        <form action="/products/<%=producto.id %>?_method=DELETE" method="POST" id="eliminarProducto" style="display: inline-flex">
             <button type="submit" class="button-edit button-delete">ELIMINAR</button>
         </form>
-        <div class="modal-container" id="suscripcion">
-            <h3>Producto agregado al carrito</h3>
-            <a href="/products/productCart"><button type="button" class="button-edit botonVerCarrito">ver carrito</button></a>
-            <a href="/products"><button type="button" class="button-edit botonSeguirComprando" >seguir comprando</button></a>
+        <div class="modal-container" id="modalEliminar">
+            <h3>¿Eliminar producto?</h3>
+            <button type="submit" class="button-edit botonEliminarProducto">Si</button>
+            <button type="button" class="button-edit botonDenegar">No</button>
         </div>
 
         <div class="enviosgratis">
@@ -166,10 +166,10 @@
                 </div>
             </form>
         </div>
+        
     </main>
     <%- include("../partials/footer")%>
     <script src="/js/interacciones.js"></script>
-    <script src="/js/productCart.js"></script>
 </body>
 
 </html>
